<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, HomeBase2Activity!</string>
    <string name="app_name">HomeBase2</string>

<!-- Tab 1 -->
	<!-- Button labels -->
    <string name="tab1_LL1_btn1">Generate</string>
    <string name="tab1_LL2_btn1">Type</string>
    <string name="tab1_LL3_btn1">Length</string>
    
	<!-- TextView labels -->
	<string name="txt_t1_LL1_tv1">Generate a password</string>
    <string name="txt_t1_LL2_tv1">Set type</string>
    <string name="txt_t1_LL3_tv1">Set length</string>
    
	<!-- Selection items: Type -->
	<string name="password_type_alphabet">Alphabets only</string>
	<string name="password_type_number">Numbers only</string>
	<string name="password_type_alnum">Mixture</string>
    
<!-- Tab 2     -->
    <string name="t2_LL1_btn1">ファイルを選ぶ</string>
    <string name="t2_LL1_btn2">アップロード</string>
    <string name="picture_select_title">Choose location</string>
		
<!-- Global -->
    <string name="exec_btn">What shall i do?</string>
    <string name="default_text">More to come!!</string>
    <string name="tv_size_1">200sp</string>
<!-- Tab 3 -->
	<string name="t3_start_button">Start</string>
	<string name="t3_stop_button">Stop</string>
	<string name="t3_select_message">Select time</string>
	<string name="t3_time">Count down time</string>
	<string-array name="selection_times">
		<item >10</item>
		<item >20</item>
		<item >30</item>
	</string-array>
	
	
	

</resources>