<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<!-- LinearLayout 1 -->

    <LinearLayout
        android:id="@+id/tab1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/tab1_LL1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="20sp" >

                <Button
                    android:id="@+id/t1_LL1_btn1"
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/tab1_LL1_btn1" />

                <TextView
                    android:id="@+id/t1_LL1_tv1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20sp"
                    android:text="Generate a password"
                    android:textSize="25sp" />

        	</LinearLayout><!-- tab1_LL1 -->
        	
        	<!-- tab1_LL2 -->
        	<LinearLayout
                android:id="@+id/tab1_LL2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="20sp" >

                <Button
                    android:id="@+id/t1_LL2_btn1"
                    android:layout_width="100sp"
                    android:layout_height="wrap_content"
                    android:text="@string/tab1_LL2_btn1"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/t1_LL2_tv1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20sp"
                    android:text="@string/txt_t1_LL2_tv1"
                    android:textSize="25sp" />

        	</LinearLayout><!-- tab1_LL2 -->

        	<!-- tab1_LL3 -->
        	<LinearLayout
                android:id="@+id/tab1_LL3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="20sp" >

                <Button
                    android:id="@+id/t1_LL3_btn1"
                    android:layout_width="100sp"
                    android:layout_height="wrap_content"
                    android:text="@string/tab1_LL3_btn1"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/t1_LL3_tv1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20sp"
                    android:text="@string/txt_t1_LL3_tv1"
                    android:textSize="25sp" />

        	</LinearLayout><!-- tab1_LL3 -->
        	
	    </LinearLayout><!-- tab1 -->

<!-- LinearLayout 2 -->

    <LinearLayout
        android:id="@+id/tab2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/tab2_LL1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/t2_LL1_btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t2_LL1_btn1" />

            <Button
                android:id="@+id/t2_LL1_btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t2_LL1_btn2" />

        </LinearLayout><!-- tab2_LL1 --><!-- tab2_LL2 -->

        <LinearLayout
            android:id="@+id/t2_LL_TEMP_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/t2_LL_TEMP1_tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                
                android:text="Temporary view" />

        </LinearLayout>

		<LinearLayout 
		    android:layout_width="match_parent"
            android:layout_height="wrap_content"
		    >
		    
			<!-- 画像 -->
		      <ImageView
					android:layout_width="200sp"
				  	android:layout_height="200sp"
					android:id="@+id/t2_iv"
					android:background="@drawable/border"
					android:layout_margin="3dp"
					android:maxWidth="190dp"
					android:maxHeight="190dp"
					android:minWidth="190dp"
					android:minHeight="190dp" />
		    
		</LinearLayout>
        
    </LinearLayout><!-- tab2 -->

<!-- LinearLayout 3 -->

    <LinearLayout
        android:id="@+id/tab3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/tab3_LL1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/t3_start_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t3_start_button" />

            <Button
                android:id="@+id/t3_stop_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t3_stop_button" />

        </LinearLayout><!-- tab3_LL1 --><!-- tab3_LL2 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/t3_select_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t3_select_message" />

            <Spinner
                android:id="@+id/t3_selection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/selection_times"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/t3_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t3_time" />

        </LinearLayout>

    </LinearLayout><!-- tab3 -->

</FrameLayout>